--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -35,8 +35,10 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@48ab28a6f5dbc2a99bf1e0131198dd8f1df78169 # v3.28.0
         with:
-          languages: ['javascript', 'typescript']
-
+          languages:
+            - javascript
+            - typescript
+            
       - name: Autobuild
         uses: github/codeql-action/autobuild@48ab28a6f5dbc2a99bf1e0131198dd8f1df78169 # v3.28.0
 
